# TFL

./: README.md
BaseGuesserForRelictMat/: guesser.cpp  guesser.py
lab2/: MAT.hs  MAT_v1.hs  Readme.md  docker-compose.yml  lab2.cabal
lab2/GuesserEdelKorov/: lstarg.py  mat.py
lab2/GuesserEdelKorov/MAT/: mat.py
lab2/LearnerRefal/: go.mod
lab2/LearnerRefal/learner/: main.go
lab2/LearnerRefal/mat/: mat.go
lab2/LearnerRefal_Rust/: Cargo.toml
lab2/LearnerRefal_Rust/src/: learner.rs  main.rs  mat.rs
lab2/dockerfiles/: haskel.dockerfile
lab2/mat/: Dockerfile  api.py  automaton.py  generate.py  generator.py  main.py  parameters.txt  requirements.txt
lab2/mat-go/: go.mod  input.go  main.go
lab2/mat-go/automaton/: automaton.go  equivalence.go  visualize.go
lab2/mat-go/generate/lexemDFA/: automaton.py  brackets.py  const.py  eol.py  equal.py  expression.py  generate.py  sep.py  test.py  var.py
lab2/mat-go/generate/lexemDFA/oldLexems/: blank.py
lab2/mat_api/: Dockerfile  main.py  main2.py  requirements.txt
lab2/mat_api/app/: utils.py
lab2/mat_api/app/mat/: automaton.py  generate.py  parameters.txt
lab2/mat_api/app/output/: automaton1.txt
lab2/mat_api/app/routers/: mat.py
lab2/other/: MAT.hs  MAT_v1.hs
lab2/src/: Automaton.hs  Automaton.txt  AutomatonEquivalence.hs  AutomatonFromEquivalenceTable.hs  AutomatonInclusion.hs  AutomatonMinimizer.hs  AutomatonTry.hs  AutomatonVisualization.hs  IORandomAutomatonGenerator.hs  MAT.hs  Main.hs  RandomAutomatonGenerator.hs
lab2/test/: AutomatonEquivalenceSpec.hs  AutomatonFromEquivalenceTableSpec.hs  AutomatonInclusionSpec.hs  AutomatonMinimizerSpec.hs
lab3/: Readme.md  lab3.cabal
lab3/fazerD/: CNF.py  CYK.py  bigrams.py  fazer.py  parse_grammar.py  test_fazer.py
lab3/src/: BigramMatrix.hs  CYKParser.hs  ChomskyNormalForm.hs  FirstFollow.hs  Grammar.hs  LastPrecede.hs  Main.hs  RemoveChainRules.hs  RemoveEpsilonRules.hs  RemoveLeftRecursion.hs  RemoveLongRules.hs  RemoveUselessSymbols.hs  Server.hs  TestGenerator.hs
lab3/test/: BigramMatrixSpec.hs  CYKParserSpec.hs  ChomskyNormalFormSpec.hs  FirstFollowSpec.hs  GrammarSpec.hs  LastPrecedeSpec.hs  RemoveChainRulesSpec.hs  RemoveEpsilonRulesSpec.hs  RemoveLeftRecursionSpec.hs  RemoveLongRulesSpec.hs  RemoveUselessSymbolsSpec.hs
lab4/: Task.md  lab4.cabal
lab4/src/: Main.hs
lab4/src/GrammarCFG/: AttributedGrammar.hs  CFG.hs  GrammarBuilder.hs
lab4/src/Regex/: AST.hs  Parser.hs  SyntaxChecker.hs
lab4/test/GrammarCFG/: AttributedGrammarSpec.hs  GrammarBuilderSpec.hs
lab4/test/Regex/: ParserSpec.hs  RegexSpec.hs  SyntaxCheckerSpec.hs
