name:                lab2
version:             0.1.0.0
-- other fields omitted for brevity
cabal-version:       >=1.10
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Automaton
                     , AutomatonMinimizer
                     , AutomatonEquivalence
                     , AutomatonVisualization
--                     , AutomatonTry
  build-depends:       base >=4.7 && <5
                     , containers >= 0.6 && < 1
  default-language:    Haskell2010

test-suite lab2-test-suite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <5
                     , hspec >= 2.7.0
                     , lab2
                     , containers >= 0.6 && < 1
  build-tool-depends:  hspec-discover:hspec-discover
  other-modules:       AutomatonEquivalenceSpec
                     , AutomatonMinimizerSpec
  default-language:    Haskell2010