name:                lab2
version:             0.1.0.0
-- other fields omitted for brevity
cabal-version:       >=1.10
build-type:          Simple

-- Library section
library
  hs-source-dirs:      src
  exposed-modules:     Automaton
                     , AutomatonMinimizer
                     , AutomatonEquivalence
                     , AutomatonVisualization
                     , AutomatonFromEquivalenceTable
                     , AutomatonInclusion
  build-depends:       base >=4.7 && <5
                     , containers >= 0.6 && < 1
  default-language:    Haskell2010

-- Test suite section
test-suite lab2-test-suite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <5
                     , hspec >= 2.7.0
                     , lab2
                     , containers >= 0.6 && < 1
  build-tool-depends:  hspec-discover:hspec-discover
  other-modules:       AutomatonEquivalenceSpec
                     , AutomatonMinimizerSpec
                     , AutomatonFromEquivalenceTableSpec
                     , AutomatonInclusionSpec
  default-language:    Haskell2010

-- Executable for Main.hs
executable mat
  -- Entry point for the executable
  main-is:             Main.hs

  -- Source directory for Main.hs and other modules
  hs-source-dirs:      src

  -- Dependencies for the executable
  build-depends:       base >=4.7 && <5
                     , containers >= 0.6 && < 1
                     , lab2

  -- Add the missing modules here
  other-modules:       Automaton
                     , AutomatonEquivalence
                     , AutomatonFromEquivalenceTable
                     , AutomatonInclusion
                     , AutomatonMinimizer
                     , AutomatonVisualization

  -- Set the default language
  default-language:    Haskell2010