name:                lab3
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple

-- Library section
library
  hs-source-dirs:      src
  exposed-modules:     Grammar
                     , RemoveLongRules
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

-- Test suite section
test-suite lab3-test-suite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <5
                     , hspec >= 2.7.0
                     , lab3
  build-tool-depends:  hspec-discover:hspec-discover
  other-modules:       GrammarSpec
                     , RemoveLongRulesSpec
  default-language:    Haskell2010

-- Executable for Main.hs
executable fuzzModule
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
                     , lab3
  other-modules:       Grammar
                     , RemoveLongRules
  default-language:    Haskell2010
