name:                lab3
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple

-- Library section
library
  hs-source-dirs:      src
  exposed-modules:     Grammar
                     , RemoveLongRules
                     , RemoveEpsilonRules
                     , RemoveChainRules
                     , RemoveUselessSymbols
                     , ChomskyNormalForm
                     , FirstFollow
                     , LastPrecede
                     , BigramMatrix
                     , TestGenerator
                     , CYKParser
  build-depends:       base >=4.7 && <5
                     , containers >=0.6 && <0.8
                     , random >=1.2 && <1.3
                     , random-shuffle >=0.0.4 && <0.1
  default-language:    Haskell2010

-- Test suite section
test-suite lab3-test-suite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <5
                     , hspec >= 2.7.0
                     , lab3
                     , containers >=0.6 && <0.8
                     , random >=1.2 && <1.3
                     , random-shuffle >=0.0.4 && <0.1
  build-tool-depends:  hspec-discover:hspec-discover
  other-modules:       GrammarSpec
                     , RemoveLongRulesSpec
                     , RemoveEpsilonRulesSpec
                     , RemoveChainRulesSpec
                     , RemoveUselessSymbolsSpec
                     , ChomskyNormalFormSpec
                     , FirstFollowSpec
                     , LastPrecedeSpec
                     , BigramMatrixSpec
                     , CYKParserSpec
  default-language:    Haskell2010

-- Executable for Main.hs
executable fuzzModule
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
                     , lab3
                     , containers >=0.6 && <0.8
                     , random >=1.2 && <1.3
                     , random-shuffle >=0.0.4 && <0.1
                     , aeson >=1.5 && <=2.3
                     , text >=1.2 && <2
                     , bytestring >=0.10 && <0.12
  other-modules:       Grammar
                     , RemoveLongRules
                     , RemoveEpsilonRules
                     , RemoveChainRules
                     , RemoveUselessSymbols
                     , ChomskyNormalForm
                     , FirstFollow
                     , LastPrecede
                     , BigramMatrix
                     , TestGenerator
                     , CYKParser
  default-language:    Haskell2010

-- Executable for Server.hs
executable lab3-server
  main-is:             Server.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
                     , lab3
                     , warp >=3.3 && <4
                     , wai >=3.2 && <3.3
                     , http-types >=0.12 && <0.13
                     , aeson >=1.5 && <=2.3
                     , text >=1.2 && <2
                     , bytestring >=0.10 && <0.12
                     , containers >=0.6 && <0.8
                     , random >=1.2 && <1.3
                     , random-shuffle >=0.0.4 && <0.1
  other-modules:       Grammar
                     , RemoveLongRules
                     , RemoveEpsilonRules
                     , RemoveChainRules
                     , RemoveUselessSymbols
                     , ChomskyNormalForm
                     , FirstFollow
                     , LastPrecede
                     , BigramMatrix
                     , TestGenerator
                     , CYKParser
  default-language:    Haskell2010
