name:                lab4
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple

library
  hs-source-dirs:      src

  exposed-modules:
                       Regex.AST
                     , Regex.Parser
                     , Regex.SyntaxChecker

                     , GrammarCFG.CFG
                     , GrammarCFG.GrammarBuilder
                     , GrammarCFG.AttributedGrammar

  build-depends:       base >=4.7 && <5
                     , containers >=0.6 && <0.8
                     , parsec >=3.1 && <4
                     , mtl >=2.2.2 && <2.3
  default-language:    Haskell2010


test-suite lab3-test-suite
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.7 && <5
                     , hspec >= 2.7.0
                     , lab4
                     , containers >=0.6 && <0.8
                     , parsec >=3.1 && <4
                     , mtl >=2.2.2 && <2.3
  build-tool-depends:  hspec-discover:hspec-discover
  other-modules:       Regex.RegexSpec
                     , Regex.ParserSpec
                     , Regex.SyntaxCheckerSpec

                     , GrammarCFG.GrammarBuilderSpec
                     , GrammarCFG.AttributedGrammarSpec


  default-language:    Haskell2010

executable Main
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5
                     , lab4
                     , containers >=0.6 && <0.8
                     , parsec >=3.1 && <4
                     , mtl >=2.2.2 && <2.3

  other-modules:       Regex.AST
                     , Regex.Parser
                     , Regex.SyntaxChecker

                     , GrammarCFG.CFG
                     , GrammarCFG.GrammarBuilder
                     , GrammarCFG.AttributedGrammar

  default-language:    Haskell2010
